# hermann_grid

./: .gitignore  Makefile  Makefile.in  NEWS  README  README.md  configure  configure.ac  grid  grid.c  grid.cpp  grid.c~
autom4te.cache/: output.1  requests  traces.0  traces.1
builds/linux/: grid
src/: Makefile.am  Makefile.in  asprintf0.h  grid.c
